<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> Save_Life </string>


    <string name="str_card_text"> Name  :  Tanya Kaushi            Blood Group  :      B+          City  :  Malabe</string>
    <string name="str_card_text1"> Name  :  Navodya Himashi      Blood Group  :      O-   City  :  Kaduwela </string>
    <string name="str_card_text2"> Name : Tanya Kaushi </string>
    <string name="str_card_text3"> Blood Group : B+ </string>
    <string name="str_card_text4"> City : Malabe </string>
    <string name="str_card_text5"> Age : 20 </string>
    <string name="str_card_text6"> Gender : female </string>
    <string name="str_card_text7"> Contact : 0714859372 </string>
    <string name="str_card_text8"> Email : tanya@gmail.com </string>
    <string name="str_card_text9"> UPDATE DONOR  </string>
    <string name="str_card_text10"> ADD NEW DONOR  </string>
    <string name="donor_info">DONOR INFORMATION</string>
    <string name="view_donor_list">View Donor List</string>
    <string name="request_message_box">Request Message Box</string>
    <string name="add_new_donor">Add New Donor</string>


    <string-array name="spinnerBlood">
        <item>Select Your Blood Group</item>
        <item>A</item>
        <item>A+</item>
        <item>B</item>
        <item>B+</item>
        <item>O</item>
        <item>O+</item>
        <item>AB</item>
        <item>AB+</item>
    </string-array>


    <string-array name="spinnerGender">
        <item>Select Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>


    <string-array name="Spinner_items">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="Spinner_it">
        <item>Yes</item>
        <item>No</item>
    </string-array>


    <string name="str_card_text11"> ABC Hospital</string>
    <string name="str_card_text12"> A+  </string>
    <string name="str_card_text13"> A- </string>
    <string name="str_card_text14"> B+</string>
    <string name="str_card_text15"> B-</string>
    <string name="str_card_text16">AB+ </string>
    <string name="str_card_text17"> AB-</string>
    <string name="str_card_text18"> O+</string>
    <string name="str_card_text19"> O-</string>
    <string name="str_card_text20"> | Yes</string>
    <string name="str_card_text21"> | No </string>
    <string name="str_card_text22"> City :  Colombo</string>
    <string name="str_card_text23"> Contact : 0112111111</string>
    <string name="str_card_text24"> Available Blood Groups</string>
    <string name="str_card_text61"> BB Hospital</string>
    <string name="str_card_text60">
        Availability A+    : Yes Availability A-    : No Availability B+    : Yes Availability B- : Yes Availability AB+ : Yes Availability AB- : Yes Availability O+ : Yes Availability O- : No  City : Colombo
    </string>


    <string name="invalid_hospital_name">Please Enter a Name</string>
    <string name="invalid_phone_number">Please Enter a Valid Phone Number</string>
    <string name="invalid_city">Please Enter a City</string>
    <string name="invalid">Please Enter The Status</string>
    <string name="invalid_password">Please Enter Correct Password</string>
    <string name="invalid_name">Please Enter a Name</string>


    <string name="phone_hint">Phone</string>
    <string name="phonehint">phone_hint2</string>

    <string name="invalid_blood">Enter Valid Blood Group</string>
    <string name="invalid_mobile">Enter Valid Mobile Number</string>
    <string name="invalid_duration">Enter Timer Duration</string>
    <string name="add_detailsbtntx">Add Details</string>
    <string name="view_detailstxt">View Details</string>
    <string name="need_helptitle">Need Help</string>
    <string name="invalid_Birthday">Enter Birthday</string>
    <string name="Invalid_blood2">Enter Blood Group</string>
    <string name="Invalid_BloodG">Enter Blood Group</string>
    <string name="request_blood">Request Blood</string>
    <string name="confirm">Confirm</string>
    <string name="request_blood_btn">Request Blood</string>
    <string name="donate_blood_btn">Donate Blood</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="home_btn">Home</string>
    <string name="update_details">Update Details</string>

    <string-array name="Bloodgroup">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


</resources>