<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".show_Details">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".AddReqBlood">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backimgview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Details"
                android:gravity="end"
                android:textColor="#000000"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_details"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/nametx"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Name"
                android:layout_gravity="center"
                android:gravity=""
                android:drawableRight="@drawable/ic_person"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="35dp"
                />

            <TextView
                android:id="@+id/citytx"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="City"
                android:layout_gravity="center"
                android:gravity=""
                android:drawableRight="@drawable/ic_city"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                />


            <TextView
                android:id="@+id/dob_tx"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Date of Birth"
                android:layout_gravity="center"
                android:gravity=""
                android:drawableRight="@drawable/ic_d"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                />

            <TextView
                android:id="@+id/bloodspin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Blood Group"
                android:layout_gravity="center"
                android:drawableRight="@drawable/ic_blood"
                android:gravity=""
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                />
            <TextView
                android:id="@+id/phonetx"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Phone"
                android:layout_gravity="center"
                android:gravity=""
                android:drawableRight="@drawable/ic_phone_24"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                />
            <TextView
                android:id="@+id/durationtx"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Duration"
                android:layout_gravity="center"
                android:drawableRight="@drawable/ic_baseline_access_time_24"
                android:gravity=""
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                />
            <Button
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:id="@+id/upd_btn"
                android:text="@string/update_btn"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:elevation="5dp"
                android:background="@drawable/addbtn"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:id="@+id/dltbtn"
                android:text="@string/delete_btn"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:elevation="5dp"
                android:background="@drawable/addbtn"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:id="@+id/homebtn"
                android:text="@string/home_btn"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:elevation="5dp"
                android:background="@drawable/addbtn"
                android:layout_gravity="center"
                />

        </LinearLayout>


    </LinearLayout></ScrollView>